force-app/main/default/objects/Master_Event_List__c/Master_Event_List__c.object-meta.xml
<CustomObject>
    <label>Master Event List</label>
    <nameField>
        <label>Master Event List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Event Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>