force-app/main/default/objects/Master_Event_List__c/fields/Avo_Creation_Using_DRE__c.field-meta.xml
<CustomField>
    <fullName>Avo_Creation_Using_DRE__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Creation Using DRE</label>
    <type>Checkbox</type>
</CustomField>