force-app/main/default/objects/Master_Event_List__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <defaultValue>DATEVALUE(&apos;2021-01-01&apos;)</defaultValue>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>