force-app/main/default/objects/Master_Event_List__c/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Avo_Planning_Application_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Record_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Events</label>
</ListView>